cmake_minimum_required(VERSION 3.9)
project(pacman)

set(CMAKE_C_STANDARD 99)
set(SDL2_GFX_INCLUDE_DIR "../sdl/sdl2-gfx-include")
set(SDL2_GFX_LibDir "../sdl/sdl2-gfx-lib")
set(SDL2_Flags "-mwindows -Wl,--no-undefined -static-libgcc")
set(SDL2_Includes "../sdl/sdl2-include")
set(SDL2_LibDir "../sdl/sdl2-lib")
add_library(SDL2 STATIC IMPORTED)
add_library(SDL2main STATIC IMPORTED)
add_library(SDL2_GFX STATIC IMPORTED)
set_property(TARGET SDL2 PROPERTY IMPORTED_LOCATION "${SDL2_LibDir}/libSDL2.a")
set_property(TARGET SDL2main PROPERTY IMPORTED_LOCATION "${SDL2_LibDir}/libSDL2main.a")
set_property(TARGET SDL2_GFX PROPERTY IMPORTED_LOCATION "${SDL2_GFX_LibDir}/libsdl-gfx.a" )
set(SDL2_Libs SDL2 SDL2main SDL2_GFX m dinput8 dxguid dxerr8 user32 gdi32 winmm imm32 ole32 oleaut32 shell32 version uuid)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ${SDL2_Flags}")
set(SOURCE src/game.c src/physics.c src/main.c)
add_executable(pacman ${SOURCE})
include_directories(src)
target_link_libraries(pacman ${SDL2_Libs})
include_directories(${SDL2_Includes} ${SDL2_GFX_INCLUDE_DIR})
